@@ -1,6 +1,9 @@
 package org.homio.api.entity.storage;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import java.text.CharacterIterator;
+import java.text.StringCharacterIterator;
+import java.util.*;
 import org.apache.commons.lang3.NotImplementedException;
 import org.homio.api.Context;
 import org.homio.api.entity.BaseEntityIdentifier;
@@ -11,12 +14,7 @@ import org.homio.api.fs.TreeNode;
 import org.homio.api.model.ActionResponseModel;
 import org.homio.api.model.Icon;
 import org.homio.api.ui.UISidebarChildren;
-import org.homio.api.ui.field.UIField;
-import org.homio.api.ui.field.UIFieldColorPicker;
-import org.homio.api.ui.field.UIFieldGroup;
-import org.homio.api.ui.field.UIFieldIconPicker;
-import org.homio.api.ui.field.UIFieldProgress;
-import org.homio.api.ui.field.UIFieldType;
+import org.homio.api.ui.field.*;
 import org.homio.api.ui.field.action.HasDynamicContextMenuActions;
 import org.homio.api.ui.field.action.UIContextMenuAction;
 import org.homio.api.ui.field.selection.SelectionConfiguration;
@@ -24,198 +22,189 @@ import org.homio.api.util.Lang;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.text.CharacterIterator;
-import java.text.StringCharacterIterator;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
 public interface BaseFileSystemEntity<FS extends FileSystemProvider>
-  extends BaseEntityIdentifier, HasDynamicContextMenuActions, HasStatusAndMsg,
-  HasPathAlias {
+        extends BaseEntityIdentifier, HasDynamicContextMenuActions, HasStatusAndMsg,
+        HasPathAlias {
 
-  Map<String, Map<Integer, FileSystemProvider>> fileSystemMap = new HashMap<>();
+    Map<String, Map<Integer, FileSystemProvider>> fileSystemMap = new HashMap<>();
 
-  static String humanReadableByteCountSI(long bytes) {
-    if (-1000 < bytes && bytes < 1000) {
-      return bytes + " B";
-    }
-    CharacterIterator ci = new StringCharacterIterator("kMGTPE");
-    while (bytes <= -999_950 || bytes >= 999_950) {
-      bytes /= 1000;
-      ci.next();
-    }
-    return String.format("%.1f %cB", bytes / 1000.0, ci.current());
-  }
-
-  default boolean createView(@NotNull List<TreeNode> sources, @NotNull String name, @NotNull Icon icon) {
-    throw new NotImplementedException("View not implemented for fileSystem");
-  }
-
-  @JsonIgnore
-  default @NotNull List<TreeConfiguration> buildFileSystemConfiguration() {
-    List<TreeConfiguration> configurations = new ArrayList<>(3);
-    configurations.add(new TreeConfiguration(this));
-    for (Alias alias : getAliases()) {
-      configurations.add(new TreeConfiguration(this, alias.getName(), alias.getAlias(), alias.getIcon()));
-    }
-    for (TreeConfiguration configuration : configurations) {
-      configuration.setDynamicUpdateId("tree-%s-%d".formatted(configuration.getId(), configuration.getAlias()));
+    static String humanReadableByteCountSI(long bytes) {
+        if (-1000 < bytes && bytes < 1000) {
+            return bytes + " B";
+        }
+        CharacterIterator ci = new StringCharacterIterator("kMGTPE");
+        while (bytes <= -999_950 || bytes >= 999_950) {
+            bytes /= 1000;
+            ci.next();
+        }
+        return String.format("%.1f %cB", bytes / 1000.0, ci.current());
     }
 
-    return configurations;
-  }
-
-  @NotNull String getFileSystemRoot();
-
-  // in minutes
-  default int getFileSystemCacheTimeout() {
-    return 1;
-  }
-
-  /**
-   * @return Short FS alias
-   */
-  @JsonIgnore
-  @NotNull String getFileSystemAlias();
-
-  /**
-   * @return Does show fs in file manager console tab
-   */
-  @JsonIgnore
-  boolean isShowInFileManager();
-
-  @UIField(order = 1)
-  @UIFieldIconPicker(allowEmptyIcon = true)
-  @UIFieldGroup(value = "FS", order = 20, borderColor = "#329DBA")
-  default String getFileSystemIcon() {
-    return getJsonData("fsi", getDefaultFileSystemIcon());
-  }
-
-  default void setFileSystemIcon(String value) {
-    setJsonData("fsi", value);
-  }
-
-  default String getDefaultFileSystemIcon() {
-    if (this instanceof SelectionConfiguration sc) {
-      return sc.getSelectionIcon().getIcon();
+    default boolean createView(@NotNull List<TreeNode> sources, @NotNull String name, @NotNull Icon icon) {
+        throw new NotImplementedException("View not implemented for fileSystem");
     }
-    var annotation = getClass().getDeclaredAnnotation(UISidebarChildren.class);
-    if (annotation != null) {
-      return annotation.icon();
+
+    @JsonIgnore
+    default @NotNull List<TreeConfiguration> buildFileSystemConfiguration() {
+        List<TreeConfiguration> configurations = new ArrayList<>(3);
+        configurations.add(new TreeConfiguration(this));
+        for (Alias alias : getAliases()) {
+            configurations.add(new TreeConfiguration(this, alias.getName(), alias.getAlias(), alias.getIcon()));
+        }
+        for (TreeConfiguration configuration : configurations) {
+            configuration.setDynamicUpdateId("tree-%s-%d".formatted(configuration.getId(), configuration.getAlias()));
+        }
+
+        return configurations;
     }
-    return "fas fa-computer";
-  }
 
-  @UIField(order = 2)
-  @UIFieldColorPicker
-  @UIFieldGroup("FS")
-  default String getFileSystemIconColor() {
-    return getJsonData("fsic", getDefaultFileSystemIconColor());
-  }
+    @NotNull String getFileSystemRoot();
 
-  default void setFileSystemIconColor(String value) {
-    setJsonData("fsic", value);
-  }
-
-  default String getDefaultFileSystemIconColor() {
-    if (this instanceof SelectionConfiguration sc) {
-      return sc.getSelectionIcon().getColor();
+    // in minutes
+    default int getFileSystemCacheTimeout() {
+        return 1;
     }
-    var annotation = getClass().getDeclaredAnnotation(UISidebarChildren.class);
-    if (annotation != null) {
-      return annotation.color();
+
+    /**
+     * @return Short FS alias
+     */
+    @JsonIgnore
+    @NotNull String getFileSystemAlias();
+
+    /**
+     * @return Does show fs in file manager console tab
+     */
+    @JsonIgnore
+    boolean isShowInFileManager();
+
+    @UIField(order = 1)
+    @UIFieldIconPicker(allowEmptyIcon = true)
+    @UIFieldGroup(value = "FS", order = 20, borderColor = "#329DBA")
+    default String getFileSystemIcon() {
+        return getJsonData("fsi", getDefaultFileSystemIcon());
     }
-    return "#B32317";
-  }
 
-  @UIField(order = 40, hideInEdit = true, hideOnEmpty = true)
-  @UIFieldProgress
-  default UIFieldProgress.Progress getSpace() {
-    try {
-      FileSystemSize dbSize = requestDbSize();
-      if (dbSize != null && dbSize.totalSpace > 0) {
-        int usedPercentage = (int) ((dbSize.totalSpace - dbSize.freeSpace) * 100 / dbSize.totalSpace);
-        String msg = humanReadableByteCountSI(dbSize.freeSpace) + " free of " + humanReadableByteCountSI(dbSize.totalSpace);
-        return new UIFieldProgress.Progress(usedPercentage, 100, msg, true);
-      }
-    } catch (Exception ignore) {
+    default void setFileSystemIcon(String value) {
+        setJsonData("fsi", value);
     }
-    return null;
-  }
 
-  @JsonIgnore
-  boolean requireConfigure();
-
-  default @NotNull FS getFileSystem(@NotNull Context context, int alias) {
-    String key = getEntityID();
-    var fsMap = fileSystemMap.computeIfAbsent(key, s -> new HashMap<>());
-    if (!fsMap.containsKey(alias)) {
-      fsMap.put(alias, buildFileSystem(context, alias));
+    default String getDefaultFileSystemIcon() {
+        if (this instanceof SelectionConfiguration sc) {
+            return sc.getSelectionIcon().getIcon();
+        }
+        var annotation = getClass().getDeclaredAnnotation(UISidebarChildren.class);
+        if (annotation != null) {
+            return annotation.icon();
+        }
+        return "fas fa-computer";
     }
-    return (FS) fsMap.get(alias);
-  }
 
-  @NotNull FS buildFileSystem(@NotNull Context context, int alias);
-
-  @JsonIgnore
-  long getConnectionHashCode();
-
-  @UIField(order = 1, hideInEdit = true, hideOnEmpty = true, fullWidth = true, bg = "#334842", type = UIFieldType.HTML)
-  default String getDescription() {
-    String prefix = getEntityPrefix();
-    return requireConfigure() ? Lang.getServerMessage(prefix.substring(0, prefix.length() - 1) + ".description") : null;
-  }
-
-  @UIContextMenuAction(value = "RESTART_FS", icon = "fas fa-file-invoice", iconColor = "#418121")
-  default ActionResponseModel restart(Context context) {
-    var fsMap = fileSystemMap.computeIfAbsent(getEntityID(), s -> new HashMap<>());
-    fsMap.values().forEach(d -> d.restart(true));
-    return ActionResponseModel.showSuccess("Success restarted");
-  }
-
-  @Override
-  default void afterDelete() {
-    var fsMap = fileSystemMap.remove(getEntityID());
-    if (fsMap != null) {
-      fsMap.values().forEach(FileSystemProvider::dispose);
+    @UIField(order = 2)
+    @UIFieldColorPicker
+    @UIFieldGroup("FS")
+    default String getFileSystemIconColor() {
+        return getJsonData("fsic", getDefaultFileSystemIconColor());
     }
-  }
 
-  @Override
-  default void afterUpdate() {
-    var fsMap = fileSystemMap.computeIfAbsent(getEntityID(), s -> new HashMap<>());
-    fsMap.values().forEach(d -> d.setEntity(this));
-  }
-
-  boolean isShowHiddenFiles();
-
-  /**
-   * List of archive formats that able to expand
-   *
-   * @return - list of archive extensions
-   */
-  default @NotNull Set<String> getSupportArchiveFormats() {
-    return Collections.emptySet();
-  }
-
-  default @Nullable FileSystemSize requestDbSize() {
-    try {
-      FS fileSystem = getFileSystem(context(), 0);
-      Long totalSpace = fileSystem.getTotalSpace();
-      Long usedSpace = fileSystem.getUsedSpace();
-      if (totalSpace != null && usedSpace != null) {
-        return new FileSystemSize(totalSpace, totalSpace - usedSpace);
-      }
-    } catch (Exception ignore) {
+    default void setFileSystemIconColor(String value) {
+        setJsonData("fsic", value);
     }
-    return null;
-  }
 
-  record FileSystemSize(long totalSpace, long freeSpace) {
-  }
+    default String getDefaultFileSystemIconColor() {
+        if (this instanceof SelectionConfiguration sc) {
+            return sc.getSelectionIcon().getColor();
+        }
+        var annotation = getClass().getDeclaredAnnotation(UISidebarChildren.class);
+        if (annotation != null) {
+            return annotation.color();
+        }
+        return "#B32317";
+    }
+
+    @UIField(order = 40, hideInEdit = true, hideOnEmpty = true)
+    @UIFieldProgress
+    default UIFieldProgress.Progress getSpace() {
+        try {
+            FileSystemSize dbSize = requestDbSize();
+            if (dbSize != null && dbSize.totalSpace > 0) {
+                int usedPercentage = (int) ((dbSize.totalSpace - dbSize.freeSpace) * 100 / dbSize.totalSpace);
+                String msg = humanReadableByteCountSI(dbSize.freeSpace) + " free of " + humanReadableByteCountSI(dbSize.totalSpace);
+                return new UIFieldProgress.Progress(usedPercentage, 100, msg, true);
+            }
+        } catch (Exception ignore) {
+        }
+        return null;
+    }
+
+    @JsonIgnore
+    boolean requireConfigure();
+
+    default @NotNull FS getFileSystem(@NotNull Context context, int alias) {
+        String key = getEntityID();
+        var fsMap = fileSystemMap.computeIfAbsent(key, s -> new HashMap<>());
+        if (!fsMap.containsKey(alias)) {
+            fsMap.put(alias, buildFileSystem(context, alias));
+        }
+        return (FS) fsMap.get(alias);
+    }
+
+    @NotNull FS buildFileSystem(@NotNull Context context, int alias);
+
+    @JsonIgnore
+    long getConnectionHashCode();
+
+    @UIField(order = 1, hideInEdit = true, hideOnEmpty = true, fullWidth = true, bg = "#334842", type = UIFieldType.HTML)
+    default String getDescription() {
+        String prefix = getEntityPrefix();
+        return requireConfigure() ? Lang.getServerMessage(prefix.substring(0, prefix.length() - 1) + ".description") : null;
+    }
+
+    @UIContextMenuAction(value = "RESTART_FS", icon = "fas fa-file-invoice", iconColor = "#418121")
+    default ActionResponseModel restart(Context context) {
+        var fsMap = fileSystemMap.computeIfAbsent(getEntityID(), s -> new HashMap<>());
+        fsMap.values().forEach(d -> d.restart(true));
+        return ActionResponseModel.showSuccess("Success restarted");
+    }
+
+    @Override
+    default void afterDelete() {
+        var fsMap = fileSystemMap.remove(getEntityID());
+        if (fsMap != null) {
+            fsMap.values().forEach(FileSystemProvider::dispose);
+        }
+    }
+
+    @Override
+    default void afterUpdate() {
+        var fsMap = fileSystemMap.computeIfAbsent(getEntityID(), s -> new HashMap<>());
+        fsMap.values().forEach(d -> d.setEntity(this));
+    }
+
+    boolean isShowHiddenFiles();
+
+    /**
+     * List of archive formats that able to expand
+     *
+     * @return - list of archive extensions
+     */
+    default @NotNull Set<String> getSupportArchiveFormats() {
+        return Collections.emptySet();
+    }
+
+    default @Nullable FileSystemSize requestDbSize() {
+        try {
+            FS fileSystem = getFileSystem(context(), 0);
+            Long totalSpace = fileSystem.getTotalSpace();
+            Long usedSpace = fileSystem.getUsedSpace();
+            if (totalSpace != null && usedSpace != null) {
+                return new FileSystemSize(totalSpace, totalSpace - usedSpace);
+            }
+        } catch (Exception ignore) {
+        }
+        return null;
+    }
+
+    record FileSystemSize(long totalSpace, long freeSpace) {
+    }
 
 }
